src/objects/FAQ_Enhanced__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>CEC</description>
        <label>Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_Sensitive_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <label>Additional Sensitive Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>CEC</description>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approved_by_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>CEC</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Text__c</fullName>
        <description>CEC</description>
        <label>Legacy Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>CEC</description>
        <label>Question</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_PDF__c</fullName>
        <description>CEC</description>
        <label>Related PDF</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Rich_Text__c</fullName>
        <description>CEC</description>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sensitive_Text__c</fullName>
        <description>CEC</description>
        <label>Sensitive Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>FAQ Enhanced</label>
    <pluralLabel>FAQ Enhanced</pluralLabel>
</CustomObject>